[gd_scene load_steps=10 format=3 uid="uid://diw44y0a4nm72"]

[ext_resource type="FontFile" uid="uid://ikp5rvqml2gx" path="res://assets/fonts/Jaro-Regular-VariableFont_opsz.ttf" id="1_1kvwn"]
[ext_resource type="Texture2D" uid="uid://bvg8w8r1v3lxv" path="res://assets/media/Screenshot 2025-09-22 202952.png" id="1_7sc1q"]
[ext_resource type="Script" uid="uid://dqx8ct4qqb8ua" path="res://scenes/ui-elements/title_menu.gd" id="1_523r4"]
[ext_resource type="Theme" uid="uid://ba1l0pgpd0u8g" path="res://scenes/ui-elements/themes/main_theme.tres" id="1_gqhwi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_523r4"]
texture = ExtResource("1_7sc1q")
modulate_color = Color(0.262933, 0.262932, 0.262932, 1)

[sub_resource type="Theme" id="Theme_gqhwi"]
Panel/styles/panel = SubResource("StyleBoxTexture_523r4")

[sub_resource type="LabelSettings" id="LabelSettings_1kvwn"]
font = ExtResource("1_1kvwn")
font_size = 96
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpoh3"]
bg_color = Color(0.0639728, 0.622742, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r87ng"]
bg_color = Color(1, 0.344145, 0.268891, 1)

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gqhwi")
script = ExtResource("1_523r4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gqhwi")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -104.0
offset_right = 160.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gqhwi")
theme_override_constants/separation = 25
alignment = 1

[node name="CreateGame" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start Game"

[node name="MechBay" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Mech Bay"

[node name="Settings" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Settings"

[node name="Exit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Exit"

[node name="Label" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -252.0
offset_right = 278.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
text = "MECH WARS"
label_settings = SubResource("LabelSettings_1kvwn")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xpoh3")
text = "daemon"

[node name="Button2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_top = 58.0
offset_right = 68.0
offset_bottom = 89.0
theme_override_styles/normal = SubResource("StyleBoxFlat_r87ng")
text = "artemis"

[connection signal="pressed" from="Control/VBoxContainer/CreateGame" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
